src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Allow_Support_Item_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delivery Schedule Mode (Locked / Flexible)</description>
        <inlineHelpText>Delivery Schedule Mode (Locked / Flexible)</inlineHelpText>
        <label>Allow Support Item Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>maica_cc__Funding_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Period_Type__c</fullName>
        <label>Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Plan</fullName>
                    <label>Active Plan Managed</label>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                    <label>Service Agreement Managed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schedule_Count__c</fullName>
        <label>Schedule Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule_Day__c</fullName>
        <label>Schedule Day</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Day__c</fullName>
        <label>Service Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Public Holiday</fullName>
                </value>
                <value>
                    <fullName>Anytime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Duration__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Service_Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Frequency__c</fullName>
        <label>Service Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                    <label>Daily</label>
                </value>
                <value>
                    <fullName>Week</fullName>
                    <label>Weekly</label>
                </value>
                <value>
                    <fullName>Month</fullName>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>One</fullName>
                    <label>One Time</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Time__c</fullName>
        <label>Service Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daytime</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
                <value>
                    <fullName>Night</fullName>
                </value>
                <value>
                    <fullName>Anytime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Support_Category__c</fullName>
        <formula>PricebookEntry.Product2.Support_Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Item_Number__c</fullName>
        <formula>PricebookEntry.Product2.Support_Item_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Item Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Purpose__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Support_Category__r.maica_cc__Support_Purpose__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Purpose</label>
        <type>Text</type>
    </fields>
</CustomObject>